<resources>
    <string name="app_name">Book Hand</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_cadastrar">Cadastrar Usuário</string>
    <string name="menu_listar">Listar Usuários</string>
    <string name="menu_editar_excluir">Excluir Usuário</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_email">evandrolutz@outlook.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeUsuario">Nome</string>
    <string name="enderecoUsuario">Endereço</string>
    <string name="dataNascUsuario">Data de nascimento</string>
    <string name="btnCadUsuario">Cadastrar usuário</string>
    <string name="btnEditarUsuario">Editar usuário</string>
    <string name="tituloExemplar">Titulo:</string>
    <string name="autorExemplar">Autor:</string>
    <string name="assuntoExemplar">Assunto:</string>
    <string name="btnCadExemplar">Cadastrar exemplar</string>
    <string name="btnEditarExemplar">Editar exemplar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="voltar">Voltar</string>
    <string name="Gênero">Gênero</string>
    <string name="Id">id:</string>
    <string name="vazio">Não há itens cadastrados.</string>
    <string name="emprestimo">id usuario empres.</string>
    <string name="exibindo">Exibindo:</string>
    <string name="escolhaExemplar">Escolha um exemplar para associar a um usuário:</string>
    <string name="associar">Associar a usuário:</string>
    <string name="associarExemplarUsuario">Associar o exemplar</string>
    <string name="pesquisaExemplar">Buscar Título na Web</string>
    <string name="lido">Lido</string>
    <string-array name="itensSpinner">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outros/Não informado</item>
    </string-array>
</resources>