<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_editar"
        android:name="com.example.entrega3.fragments.EditarFragment"
        android:label="Editar"
        tools:layout="@layout/fragment_editar">
        <action
            android:id="@+id/action_nav_editarFragment_to_nav_listarFragment"
            app:destination="@id/nav_listar" />
        <action
            android:id="@+id/action_nav_editarFragment_to_nav_listar"
            app:destination="@id/nav_listar" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.entrega3.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cadastrar"
        android:name="com.example.entrega3.fragments.CadastraFragment"
        android:label="@string/menu_cadastrar"
        tools:layout="@layout/fragment_cadastra" >
        <action
            android:id="@+id/action_nav_cadastrar_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.entrega3.fragments.ListarUsuariosFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar_usuarios" >
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.entrega3.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_cadastrar_livro"
        android:name="com.example.entrega3.fragments.Cadastrar_livroFragment"
        android:label="Cadastrar Livro"
        tools:layout="@layout/fragment_cadastrar_livro" />
    <fragment
        android:id="@+id/nav_listar_livros"
        android:name="com.example.entrega3.fragments.Listar_livrosFragment"
        android:label="Listar Livros"
        tools:layout="@layout/fragment_listar_livros" />

</navigation>