<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/linearContent">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutNome"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="@null"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNome"
            android:hint="@string/nomeUsuario"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutData"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="10"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDtNasc"
            android:hint="@string/dataNascUsuario"
            android:inputType="text|date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutEndereco"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="100"
        app:boxBackgroundColor="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEnd"
            android:hint="@string/enderecoUsuario"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
      />

</androidx.appcompat.widget.LinearLayoutCompat>